--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,93 @@
+@import url("https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap");
+
+* {
+  margin: 0;
+  padding: 0;
+  border: 0;
+  font-size: 100%;
+  font: inherit;
+  color: #374151;
+}
+
+.banner {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  background-color: #e11d48;
+  font-size: 3em;
+
+  width: 100%;
+  height: 100px;
+}
+
+.banner h1 {
+  color: white;
+  font-weight: bold;
+  letter-spacing: 0.12em;
+}
+
+.card-img {
+  height: 400px;
+  width: 300px;
+  object-fit: cover;
+  border-radius: 10px;
+  vertical-align: top;
+}
+
 .App {
-  text-align: center;
-}
-
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
   display: flex;
   flex-direction: column;
   align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+
+  gap: 30px;
 }
 
-.App-link {
-  color: #61dafb;
+main {
+  display: flex;
+  flex-direction: column;
+  padding: 0px 5%;
+  gap: 40px;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.card {
+  display: flex;
+  font-family: "Roboto", sans-serif;
+  max-width: 1000px;
+
+  background-color: #f1f5f9;
+  border-radius: 10px;
+}
+
+.card-info {
+  margin: 0px 50px;
+}
+
+.country-name {
+  font-size: 1.5em;
+  margin-top: 30px;
+  text-transform: uppercase;
+  letter-spacing: 0.17em;
+}
+
+.maps {
+  letter-spacing: 0;
+  text-transform: none;
+  font-size: 0.8em;
+  color: gray;
+}
+
+.place-name {
+  font-size: 4em;
+  font-weight: bold;
+  margin-bottom: 30px;
+}
+
+.dates {
+  font-size: 1.5em;
+  font-weight: bold;
+  margin-bottom: 20px;
+}
+
+.description {
+  font-size: 1.2em;
 }
